# project_scratch

./: CMakeLists.txt  ColorUtil.cpp  ColorUtil.h  Costumes.cpp  Costumes.h  Drawlayer.cpp  Drawlayer.h  Pen.cpp  Pen.h  UI.cpp  UI.h  UICallback.cpp  UICallback.h  events.cpp  events.h  globals.cpp  globals.h  khoeini1.h  khoeini2.h  khoeini3.h  main.cpp  operators.cpp  operators.h  project.cpp  project.h  sound.cpp  sound.h  sprite.cpp  sprite.h  types.h  ui1.cpp  ui1.h
